--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
               </p>
               <div class="row">
                 <div class="contact__btn d-flex align-items-center col-12">
-                  <a href="#footer">Contact us</a>
+                  <a href="#sixth">Contact us</a>
                 </div>
               </div>
               <div class="row d-flex justify-content-center header-line-wraper">
@@ -106,7 +106,7 @@
           <div class="benefits-box">
             <div class="row centered benefits">
               <div class="benefit-1">
-                <div class="benefit__ic mx-auto">
+                <div class="benefits__ic mx-auto">
                   <svg
                     width="72"
                     height="72"
@@ -364,7 +364,7 @@
                       <div class="intro-meet d-flex align-items-center">
                         <span>Meet Katherine</span>
                         <div class="service-arrow">
-                          <!-- <div class="line"></div> -->
+                          <div class="line"></div>
                           <div class="arrow">
                             <div></div>
                           </div>
@@ -458,7 +458,7 @@
                       <div class="intro-meet">
                         <span>Meet Sam</span>
                         <div class="service-arrow">
-                          <!-- <div class="line"></div> -->
+                          <div class="line"></div>
                           <div class="arrow">
                             <div></div>
                           </div>
@@ -558,18 +558,42 @@
             <div class="news__title-line col-12"></div>
           </div>
           <div class="row">
-            <div class="col-12">
+            <!-- <div class="col-12"> -->
               <div class="swiper newsSwiper">
                 <div class="swiper-wrapper card-wrapper">
                   <div class="swiper-slide">
-                    <a class="card">
+                    <a class="card" href="https://www.einpresswire.com/article/579850533/marvel-turns-3-expands-biomethane-services-to-canada-and-europe">
                       <div class="image-contetnt">
                         <img src="@img/news/news-1.jpg" alt="" />
                       </div>
                       <div class="text-content">
                         <div class="card-title">
                         <div class="card-logo">
-                          <img src="@img/news//logo-cision.svg" alt="" />
+                          <img src="@img/news/logo-einpresswire.svg" alt="" />
+                        </div>
+                          <div>Marvel Turns 3, Expands Biomethane Services to Canada and Europe</div>
+                        </div>
+                        <div class="card-bottom">
+                          <span class="card-date">July 06, 2022</span>
+                          <span>
+                            <div class="line"></div>
+                            <div class="arrow">
+                              <div></div>
+                            </div>
+                          </span>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="swiper-slide">
+                    <a class="card" href="https://www.prnewswire.com/news-releases/marvel-celebrates-anniversary-1b-in-closed-transactions-301331909.html">
+                      <div class="image-contetnt">
+                        <img src="@img/news/news-2.jpg" alt="" />
+                      </div>
+                      <div class="text-content">
+                        <div class="card-title">
+                        <div class="card-logo">
+                          <img src="@img/news/logo-cision.svg" alt="" />
                         </div>
                           <div>Marvel Celebrates Anniversary, $1B in Closed Transactions</div>
                         </div>
@@ -586,9 +610,9 @@
                     </a>
                   </div>
                   <div class="swiper-slide">
-                    <a class="card">
+                    <a class="card" href="https://www.trccompanies.com/insights/trc-and-marvel-announce-rng-development-support-partnership/">
                       <div class="image-contetnt">
-                        <img src="@img/news/news-2.jpg" alt="" />
+                        <img src="@img/news/news-3.jpg" alt="" />
                       </div>
                       <div class="text-content">
                         <div class="card-title">
@@ -598,7 +622,7 @@
                           <div>TRC and Marvel Announce RNG Development Support Partnership</div>
                         </div>
                         <div class="card-bottom">
-                          <span class="card-date">May 23, 2021</span>
+                          <span class="card-date">May 20, 2021</span>
                           <span>
                             <div class="line"></div>
                             <div class="arrow">
@@ -610,9 +634,9 @@
                     </a>
                   </div>
                   <div class="swiper-slide">
-                    <a class="card">
+                    <a class="card" href="https://www.prnewswire.com/news-releases/marvel-power-group-joins-rng-coalition-301220807.html">
                       <div class="image-contetnt">
-                        <img src="@img/news/news-3.jpg" alt="" />
+                        <img src="@img/news/news-4.jpg" alt="" />
                       </div>
                       <div class="text-content">
                         <div class="card-title">
@@ -633,36 +657,12 @@
                       </div>
                     </a>
                   </div>
-                  <div class="swiper-slide">
-                    <a class="card">
-                      <div class="image-contetnt">
-                        <img src="@img/news/news-4.jpg" alt="" />
-                      </div>
-                      <div class="text-content">
-                        <div class="card-title">
-                        <div class="card-logo">
-                          <img src="@img/news//logo-einpresswire.svg" alt="" />
-                        </div>
-                          <div>Marvel Turns 3, Expands Biomethane Services to Canada and Europe</div>
-                        </div>
-                        <div class="card-bottom">
-                          <span class="card-date">July 06, 2022</span>
-                          <span>
-                            <div class="line"></div>
-                            <div class="arrow">
-                              <div></div>
-                            </div>
-                          </span>
-                        </div>
-                      </div>
-                    </a>
-                  </div>
                 </div>
                 <div class="swiper-button-next next-btn"></div>
                 <div class="swiper-button-prev prev-btn"></div>
                 <div class="swiper-pagination pagination"></div>
               </div>
-            </div>
+            <!-- </div> -->
           </div>
         </div>
       </section>
