--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -18,7 +18,7 @@
             <div class="form-title">
               Stay in the loop by getting on our mailing list
             </div>
-            <form action="#">
+            <form action="#form" id="sixth">
               <input class="form-input" id="form-input-name" type="text" placeholder="name *"/>
               <span class="error name none">Name field is required</span>
 
