--- a/src/html/header.html
+++ b/src/html/header.html
@@ -3,7 +3,7 @@
         <nav class="navbar" id="navbar">
             <div class="row w-100 mx-auto d-flex align-items-center justify-content-between">
                 <div class="col-6 col-md-2">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="#first">
                         <svg width="146" height="55" viewBox="0 0 146 55" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M42.983 12.1304L44.3021 41.6841H38.0861L37.6252 30.4096L22.9075 52.3602L16.519 31.7566L6.74119 55H0L17.3477 13.7608L24.9588 38.2323L42.983 12.1304Z" fill="#0B0D21"/>
                             <path d="M29.0778 0C44.1059 0 56.2885 12.2058 56.2885 27.2625C56.2885 38.6552 49.3136 48.4157 39.4088 52.4914L39.4087 48.6386C47.3218 44.7926 52.7775 36.6659 52.7775 27.2625C52.7775 14.1486 42.1668 3.51774 29.0778 3.51774C15.9889 3.51774 5.37824 14.1486 5.37824 27.2625C5.37824 32.7426 7.23117 37.7891 10.3436 41.8074L7.94401 41.807L7.94359 44.4361C4.14414 39.7483 1.86719 33.7718 1.86719 27.2625C1.86719 12.2058 14.0498 0 29.0778 0Z" fill="#0B0D21"/>
@@ -21,10 +21,10 @@
                     <li><a data-goto=".team" class="navbar__link" href="#">Team</a></li>
                     <li><a data-goto=".news" class="navbar__link" href="#">News</a></li>
                     <li><a data-goto=".footer" class="navbar__link " href="#">Contact</a></li>
-                    <li id="navbar-contact-us">
+                    <li id="navbar-contact-us" class="navbar-contact-us">
                         <div class="contact__btn d-flex align-items-center col-12">
                             <a data-goto=".footer">Contact us</a>
-                          </div>
+                        </div>
                     </li>
                 </ul>
                 <!-- </div> -->
